--- a/index.html
+++ b/index.html
@@ -10,7 +10,85 @@
 </head>
 
 <body>
+    <header>
+        <div class="navbar-container">
+            <h1 class="logo">Saxvik</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Work</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
 
+            </nav>
+        </div>
+    </header>
+
+    <main>
+
+        <section class="first-page-container">
+            <div class="first-page-content">
+                <h2>Saxvik</h2>
+                <p>portfolio</p>
+            </div>
+
+            <img class="logo-img" src="img/TESTLOGO.png" alt="Saxvik logo">
+
+        </section>
+
+        <section class="about-container">
+            <div class="about-content">
+                <h2>About</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur.
+                </p>
+            </div>
+        </section>
+
+        <section class="work-container">
+            <div class="work-content">
+                <h2>Work</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur.
+                </p>
+            </div>
+        </section>
+
+        <section class="contact-container">
+            <div class="contact-content">
+                <h2>Contact</h2>
+                <ul>
+                    <li>email</li>
+                    <li>phone</li>
+                </ul>
+
+                <h2>Find me</h2>
+                <ul>
+                    <li>
+                        <a href="#">LinkedIN (icon)</a>
+                    </li>
+                    <li>
+                        <a href="#">GitHub (icon)</a>
+                    </li>
+                </ul>
+
+
+            </div>
+
+        </section>
+    </main>
 
 </body>
 
