--- a/index.html
+++ b/index.html
@@ -30,17 +30,28 @@
         </div>
     </header>
 
-    <main>
 
-        <section class="first-page-container">
-            <div class="first-page-content">
-                <h2>Saxvik</h2>
-                <p>portfolio</p>
+
+    <section class="first-page-container">
+        <div class="first-page-content">
+
+
+            <div class="logo-container">
+                <img class="logo-img" src="img/LOGO.png" alt="Saxvik logo">
             </div>
 
-            <img class="logo-img" src="img/TESTLOGO.png" alt="Saxvik logo">
+            <h2>- portfolio -</h2>
 
-        </section>
+            <div class="first-page-background-container">
+                <img class="background-img" src="img/background-small.png" alt="background">
+            </div>
+
+
+        </div>
+
+    </section>
+
+    <main>
 
         <section class="about-container">
             <div class="about-content">
