--- a/index.html
+++ b/index.html
@@ -6,50 +6,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Saxvik Portfolio</title>
+    <link rel="stylesheet" href="https://use.typekit.net/lwq3igk.css">
+
+
+
+    <title>Linnea Saxvik</title>
 </head>
 
 <body>
-    <header>
-        <div class="navbar-container">
-            <h1 class="logo">Saxvik</h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Work</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
 
-            </nav>
-        </div>
+
+    <header>
+        <section class="header-container">
+            <div class="navbar-container">
+
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">About</a>
+                        </li>
+                        <li>
+                            <a href="#">Work</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact</a>
+                        </li>
+                    </ul>
+
+                </nav>
+            </div>
+
+
+            <div class="header-content">
+
+
+                <div class="logo-container">
+                    <img class="logo-img" src="images/LOGO.png" alt="Saxvik logo">
+                </div>
+
+                <h1>front end developer</h1>
+
+
+            </div>
+
+        </section>
     </header>
 
 
-
-    <section class="first-page-container">
-        <div class="first-page-content">
-
-
-            <div class="logo-container">
-                <img class="logo-img" src="img/LOGO.png" alt="Saxvik logo">
-            </div>
-
-            <h2>- portfolio -</h2>
-
-            <div class="first-page-background-container">
-                <img class="background-img" src="img/background-small.png" alt="background">
-            </div>
-
-
-        </div>
-
-    </section>
 
     <main>
 
@@ -57,12 +60,11 @@
             <div class="about-content">
                 <h2>About</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur.
+                    Hi! I'm a Front End Developer in Malmö, currently a student at Medieinstitutet. This page will soon
+                    be filled with various projects!
                 </p>
             </div>
+
         </section>
 
         <section class="work-container">
@@ -77,6 +79,10 @@
             </div>
         </section>
 
+
+    </main>
+
+    <footer>
         <section class="contact-container">
             <div class="contact-content">
                 <h2>Contact</h2>
@@ -99,7 +105,7 @@
             </div>
 
         </section>
-    </main>
+    </footer>
 
 </body>
 
