about och footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/lwq3igk.css">
+    <script src="https://kit.fontawesome.com/6f1c4376af.js" crossorigin="anonymous"></script>
 
 
 
@@ -15,27 +16,27 @@
 
 <body>
 
+    <div class="navbar-container">
+
+        <nav>
+            <ul>
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+
+        </nav>
+    </div>
 
     <header>
+
         <section class="header-container">
-            <div class="navbar-container">
-
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="#">About</a>
-                        </li>
-                        <li>
-                            <a href="#">Work</a>
-                        </li>
-                        <li>
-                            <a href="#">Contact</a>
-                        </li>
-                    </ul>
-
-                </nav>
-            </div>
-
 
             <div class="header-content">
 
@@ -57,18 +58,21 @@
     <main>
 
         <section class="about-container">
-            <div class="about-content">
+            <div class="about-content" id="about">
                 <h2>About</h2>
                 <p>
                     Hi! I'm a Front End Developer in Malmö, currently a student at Medieinstitutet. This page will soon
                     be filled with various projects!
                 </p>
+                <div class="icon">
+                    <i id="scissor" class="fa-solid fa-scissors fa-2xl"></i>
+                </div>
             </div>
 
         </section>
 
         <section class="work-container">
-            <div class="work-content">
+            <div class="work-content" id="work">
                 <h2>Work</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -83,23 +87,29 @@
     </main>
 
     <footer>
-        <section class="contact-container">
-            <div class="contact-content">
-                <h2>Contact</h2>
-                <ul>
-                    <li>email</li>
-                    <li>phone</li>
-                </ul>
+        <section class="footer-container">
+            <div class="footer-content" id="contact">
 
-                <h2>Find me</h2>
-                <ul>
-                    <li>
-                        <a href="#">LinkedIN (icon)</a>
-                    </li>
-                    <li>
-                        <a href="#">GitHub (icon)</a>
-                    </li>
-                </ul>
+                <div class="footer-contact">
+                    <h2>Contact</h2>
+                    <ul>
+                        <li>
+                            <i class="fa-regular fa-envelope"></i>
+                            <a href="mailto:#"> linnea.saxvik@gmail.com</a>
+                        </li>
+
+                        <li>
+                            <i class="fa-brands fa-github"></i>
+                            <a href="https://github.com/saxvik">GitHub</a>
+                        </li>
+
+                        <li>
+                            <i class="fa-brands fa-linkedin"></i>
+                            <a href="#">LinkedIN</a>
+                        </li>
+
+                    </ul>
+                </div>
 
 
             </div>
