--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 </div>
 
                 <h1>front end developer</h1>
+                <a href="#main"><i class="fa-solid fa-angle-down fa-2xl"></i></a>
 
 
             </div>
@@ -55,7 +56,7 @@
 
 
 
-    <main>
+    <main id="main">
 
         <section class="about-container">
             <div class="about-content" id="about">
@@ -74,12 +75,34 @@
         <section class="work-container">
             <div class="work-content" id="work">
                 <h2>Work</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur.
-                </p>
+                <!--testar gallery-->
+                <div class="row">
+                    <div class="column">
+                        <div class="content">
+                            <img src="./images/gallery.png" alt="Gallery image" style="width:100%">
+                            <h3>My Work</h3>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="content">
+                            <img src="./images/gallery2.png" alt="Gallery image" style="width:100%">
+                            <h3>My Work</h3>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="content">
+                            <img src="./images/gallery3.png" alt="Gallery image" style="width:100%">
+                            <h3>My Work</h3>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="content">
+                            <img src="./images/gallery4.png" alt="Gallery image" style="width:100%">
+                            <h3>My Work</h3>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
