navbar ofärdiga ändringar

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <nav>
             <ul>
                 <li>
+                    <a href="#header">Home</a>
+                </li>
+                <li>
                     <a href="#about">About</a>
                 </li>
                 <li>
@@ -36,7 +39,7 @@
 
     <header>
 
-        <section class="header-container">
+        <section class="header-container" id="header">
 
             <div class="header-content">
 
@@ -75,7 +78,7 @@
         <section class="work-container">
             <div class="work-content" id="work">
                 <h2>Work</h2>
-                <!--testar gallery-->
+                <!--placeholder blider för framtida project-->
                 <div class="row">
                     <div class="column">
                         <div class="content">
