--- a/index.html
+++ b/index.html
@@ -61,47 +61,50 @@
 
     <main id="main">
 
-        <section class="about-container">
-            <div class="about-content" id="about">
-                <h2>About</h2>
-                <p>
-                    Hi! I'm a Front End Developer in Malmö, currently a student at Medieinstitutet. This page will soon
-                    be filled with various projects!
-                </p>
-                <div class="icon">
-                    <i id="scissor" class="fa-solid fa-scissors fa-2xl"></i>
+        <div class="about-container-container">
+            <section class="about-container">
+                <div class="about-content" id="about">
+                    <h2>About</h2>
+                    <p>
+                        Hi! I'm a Front End Developer in Malmö, currently a student at Medieinstitutet. This page will
+                        soon
+                        be filled with various projects!
+                    </p>
+                    <div class="icon">
+                        <i id="scissor" class="fa-solid fa-scissors fa-2xl"></i>
+                    </div>
                 </div>
-            </div>
 
-        </section>
+            </section>
+        </div>
 
         <section class="work-container">
             <div class="work-content" id="work">
                 <h2>Work</h2>
                 <!--placeholder blider för framtida project-->
                 <div class="row">
-                    <div class="column">
-                        <div class="content">
+                    <div class="gallery-column">
+                        <div class="gallery-content">
                             <img src="./images/gallery.png" alt="Gallery image" style="width:100%">
-                            <h3>My Work</h3>
+                            <h3>This</h3>
                         </div>
                     </div>
-                    <div class="column">
-                        <div class="content">
+                    <div class="gallery-column">
+                        <div class="gallery-content">
                             <img src="./images/gallery2.png" alt="Gallery image" style="width:100%">
-                            <h3>My Work</h3>
+                            <h3>Is</h3>
                         </div>
                     </div>
-                    <div class="column">
-                        <div class="content">
+                    <div class="gallery-column">
+                        <div class="gallery-content">
                             <img src="./images/gallery3.png" alt="Gallery image" style="width:100%">
-                            <h3>My Work</h3>
+                            <h3>Coming</h3>
                         </div>
                     </div>
-                    <div class="column">
-                        <div class="content">
+                    <div class="gallery-column">
+                        <div class="gallery-content">
                             <img src="./images/gallery4.png" alt="Gallery image" style="width:100%">
-                            <h3>My Work</h3>
+                            <h3>Soon!</h3>
                         </div>
                     </div>
                 </div>
