meta-tags tillagda

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Portfolio of Linnea Saxvik front end developer">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="A portfolio of front end developer Linnea Saxvik">
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/lwq3igk.css">
     <script src="https://kit.fontawesome.com/6f1c4376af.js" crossorigin="anonymous"></script>
 
-
-
-    <title>Linnea Saxvik</title>
+    <title>Linnea Saxvik Portfolio</title>
 </head>
 
 <body>
