--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content="Portfolio of Linnea Saxvik front end developer">
     <meta property="og:type" content="website">
     <meta property="og:description" content="A portfolio of front end developer Linnea Saxvik">
+    <meta property="og:url" content="https://saxvik.netlify.app//">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/lwq3igk.css">
